# corefacility-monthly-checker

./: .gitignore  MANIFEST.in  README.md  corefacility-checker  pyproject.toml
src/: checker.py
src/corefacility_monthly_checker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/ru/ihna/kozhukhov/corefacility_checker/: __init__.py  checker_test.py  command_line_test.py  config.json.default  console_formatter.py  cpu_test.py  disk_reading_test.py  exceptions.py  fail_test.py  mail_handler.py  memory_test.py  smart_test.py  sql_dump.py
