[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tools.setuptools]
include-package-data=true

[tools.setuptools.packages.find]
where = "src"

[project]
name = "corefacility-monthly-checker"
version = "1.0.1"
dependencies = [
    "django"
]

[project.scripts]
corefacility-checker = "ru.ihna.kozhukhov.corefacility_checker:main"